--- a/index.html
+++ b/index.html
@@ -3,19 +3,42 @@
   <head>
     <meta name="viewport" content="width-device-width, initial-scale=1">
     <title>To-Do App</title>
+
+    <!-- Material Design Lite -->
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-lime.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="styles/main.css">
   </head>
-  <body>
-    <h1>To-Do App</h1>
 
-    <form id="addToDoForm">
-      <label for="newToDoText">New To-Do</label>
-      <input type="text" id="newToDoText">
-      <button type="submit">Add To-Do!</button>
-    </form>
+<body>
+  <div class="project mdl-cell mdl-card mdl-shadow--6dp">
+    <main class="mdl-layout__content">
 
-    <ul id="toDoList">
-    </ul>
+        <div class="mdl-card__title mdl-color--primary mdl-color-text--white">
+          <h2 class="mdl-card__title-text">To-Do App</h2>
+        </div>
 
-    <script src="app.js"></script>
-  </body>
+        <form id="addToDoForm">
+          <div class="mdl-card__supporting-text">
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <label class="mdl-textfield__label" for="newToDoText">New To-Do</label>
+              <input class="mdl-textfield__input" type="text" id="newToDoText">
+            </div>
+            <button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" type="submit">Add To-Do!</button>
+          </div>
+        </form>
+
+          <ul class="mdl-card__supporting-text" id="toDoList">
+          </ul>
+
+        <script src="app.js"></script>
+
+    </main>
+  </div>
+</body>
+
+
+
 </html>
